Correlations by year

--- a/MergedDF.ipynb
+++ b/MergedDF.ipynb
@@ -1798,23 +1798,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.        , 0.30320265],\n",
-       "       [0.30320265, 1.        ]])"
+       "array([[1.        , 0.33204245],\n",
+       "       [0.33204245, 1.        ]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.corrcoef(formattedDF['Average Percent Unemployed'], formattedDF['Crimes Per 100 Workers'])"
+    "np.corrcoef(year2010DF['Average Percent Unemployed'], year2010DF['Crimes Per 100 Workers'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.37750957],\n",
+       "       [0.37750957, 1.        ]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(year2011DF['Average Percent Unemployed'], year2011DF['Crimes Per 100 Workers'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.35187436],\n",
+       "       [0.35187436, 1.        ]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(year2012DF['Average Percent Unemployed'], year2012DF['Crimes Per 100 Workers'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.28501245],\n",
+       "       [0.28501245, 1.        ]])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(year2013DF['Average Percent Unemployed'], year2013DF['Crimes Per 100 Workers'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.28446793],\n",
+       "       [0.28446793, 1.        ]])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(year2014DF['Average Percent Unemployed'], year2014DF['Crimes Per 100 Workers'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.       , 0.2524659],\n",
+       "       [0.2524659, 1.       ]])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(year2015DF['Average Percent Unemployed'], year2015DF['Crimes Per 100 Workers'])"
    ]
   },
   {
