--- a/MergedDF.ipynb
+++ b/MergedDF.ipynb
@@ -1924,6 +1924,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.        , 0.30320265],\n",
+       "       [0.30320265, 1.        ]])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(formattedDF['Average Percent Unemployed'], formattedDF['Crimes Per 100 Workers'])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
