--- a/MergedDF.ipynb
+++ b/MergedDF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "4              7671        71372.16667  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,12 +170,13 @@
     "                           'count': 'Number of Crimes', 'Average Total Employment': 'Total Labor Force'})\n",
     "\n",
     "# Show\n",
+    "formatted = formattedDF[formattedDF['Number of Crimes'] != 0]\n",
     "formattedDF.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +295,7 @@
        "4              7671        71372.16667               10.747887  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +438,7 @@
        "max       583109.000000       5.004087e+06              147.560641  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +880,7 @@
        "28           0.037455  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -914,7 +915,7 @@
     "ax = plt.violinplot([year2015DF['Crimes Per Worker'], year2014DF['Crimes Per Worker'], \n",
     "                year2013DF['Crimes Per Worker'], year2012DF['Crimes Per Worker'], \n",
     "                year2011DF['Crimes Per Worker'], year2010DF['Crimes Per Worker']], vert = False,\n",
-    "              showmeans = True)\n",
+    "                   showmeans = True)\n",
     "plt.title(\"Crimes Per Worker by Year\")\n",
     "plt.xlabel(\"Crimes Per Worker\")\n",
     "plt.yticks([1,2,3,4,5,6], [2015,2014,2013,2012,2011,2010])\n",
@@ -923,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1122,7 @@
        "13144               31.325604           0.313256  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1138,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1337,7 @@
        "869                  4.123242           0.041232  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1353,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [
     {
@@ -1383,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [
     {
@@ -1440,7 +1441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [
     {
@@ -1522,7 +1523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -1545,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -1568,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [
     {
@@ -1591,7 +1592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -1660,7 +1661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -1683,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -1706,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -1752,7 +1753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -1775,7 +1776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -1798,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -1808,7 +1809,7 @@
        "       [0.33204245, 1.        ]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1819,7 +1820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -1829,7 +1830,7 @@
        "       [0.37750957, 1.        ]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 229,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1840,7 +1841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -1850,7 +1851,7 @@
        "       [0.35187436, 1.        ]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1861,7 +1862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -1871,7 +1872,7 @@
        "       [0.28501245, 1.        ]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1882,7 +1883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -1892,7 +1893,7 @@
        "       [0.28446793, 1.        ]])"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 232,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1903,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1914,7 @@
        "       [0.2524659, 1.       ]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 233,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1924,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -1934,7 +1935,7 @@
        "       [0.30320265, 1.        ]])"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 234,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1942,6 +1943,13 @@
    "source": [
     "np.corrcoef(formattedDF['Average Percent Unemployed'], formattedDF['Crimes Per 100 Workers'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
